@@ -1,3 +1,1 @@
-- fix speed display page in Qt 5/Sailfish GUI
-- show distance from current position for all search results in Qt 5/Sailfish GUI
-- show scroll decorators for most pages in Sailfish GUI
+- fix the Map1.eu and mtbmap layers not showing up in the map layer menu
