@@ -1,3 +1,7 @@
+* Tue Mar 11 2014 Martin Kolman <martin.kolman@gmail.com> - 0.45.7
+- fix the Map1.eu and mtbmap layers not showing up in the map layer menu
+* Sun Mar 09 2014 Martin Kolman <martin.kolman@gmail.com> - 0.45.6
+- also show scroll decorator on the map layer selector in Sailfish GUI
 * Sun Mar 09 2014 Martin Kolman <martin.kolman@gmail.com> - 0.45.5
 - fix speed display page in Qt 5/Sailfish GUI
 - show distance from current position for all search results in Qt 5/Sailfish GUI
